Fix company name on smaller devices

--- a/main.sass
+++ b/main.sass
@@ -26,9 +26,10 @@ main
   h1
     color: white
     padding-top: 7vh
-    line-height: 2.5
+    line-height: 1.3
     text-shadow: 0 0 6px #FFF
     border-bottom: 1px solid $color4
+    padding-bottom: 1em
 
   span.subtitle
     display: block
